Fixed wrap and spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2558,6 +2558,10 @@ input, select, textarea {
 				.wrapper.style3-alt .icon.major:before {
 					color: #3c7d63;
 				}
+				
+			.icon.major.email {
+				display: inline-block;
+			}
 
 /* Image */
 
